--- a/ironfish-cli/package.json
+++ b/ironfish-cli/package.json
@@ -44,7 +44,7 @@
     "lint:fix": "tsc -b && eslint --ext .ts,.tsx,.js,.jsx src/ --fix",
     "start:dev": "node start",
     "start": "yarn build && yarn start:js",
-    "start:js": "cross-env OCLIF_TS_NODE=0 IRONFISH_DEBUG=1 node --expose-gc bin/run",
+    "start:js": "cross-env OCLIF_TS_NODE=0 IRONFISH_DEBUG=1 UV_THREADPOOL_SIZE=1024 node --max_old_space_size=4096 --expose-gc bin/run",
     "start:debug": "yarn build && cross-env OCLIF_TS_NODE=0 IRONFISH_DEBUG=1 node --expose-gc --inspect bin/run",
     "test": "yarn clean && tsc -b && tsc -b tsconfig.test.json && jest",
     "test:coverage:html": "tsc -b tsconfig.test.json && jest --coverage --coverage-reporters html --testPathIgnorePatterns",
